# de_wiktio

./: .gitignore  404.html  LICENSE  index.html  mkdocs.yml  objects.inv  pyproject.toml
API/: index.html
API/entry/: index.html
API/fetch/: index.html
API/settings/: index.html
css/: mkdocstrings.css
de_wiktio/: __init__.py  entry.py  fetch.py  settings.py
docs/: README.md  usage.md
docs/API/: entry.md  fetch.md  index.md  settings.md
docs/css/: mkdocstrings.css
search/: search_index.json
usage/: index.html
